Parser/parser.output
State 37 conflicts: 8 shift/reduce
State 51 conflicts: 8 shift/reduce, 1 reduce/reduce
State 61 conflicts: 1 shift/reduce
State 76 conflicts: 1 reduce/reduce
State 77 conflicts: 1 reduce/reduce
State 118 conflicts: 1 shift/reduce
State 133 conflicts: 2 shift/reduce
State 134 conflicts: 2 shift/reduce
State 141 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 $@1: %empty

    2 Program: $@1 DeclList

    3 DeclList: Decl
    4         | Decl DeclList

    5 Decl: VarDecl
    6     | FunDecl

    7 $@2: %empty

    8 FunDecl: TYPE ID OPAR $@2 CPAR Block

    9 VarDeclList: %empty
   10            | VarDecl VarDeclList

   11 VarDecl: TYPE ID SEMICOLON
   12        | TYPE ID OSB NUMBER CSB SEMICOLON
   13        | TYPE ID
   14        | TYPE ID OSB NUMBER CSB
   15        | TYPE ID OSB CSB SEMICOLON

   16 $@3: %empty

   17 VarDecl: FUN TYPE ID $@3 Tail

   18 StmtList: Stmt
   19         | Stmt StmtList

   20 Stmt: %empty
   21     | READ ID SEMICOLON
   22     | WRITE ID SEMICOLON
   23     | WRITELN SEMICOLON
   24     | WRITE STRING SEMICOLON
   25     | WRITELN STRING SEMICOLON
   26     | Expr SEMICOLON
   27     | RETURN MathExpr SEMICOLON

   28 $@4: %empty

   29 Stmt: WHILE $@4 OPAR RelExpr CPAR Block
   30     | Matched
   31     | Unmatched

   32 $@5: %empty

   33 Matched: IF OPAR RelExpr CPAR Matched ELSE $@5 Matched
   34        | Block

   35 Unmatched: IF OPAR RelExpr CPAR Block
   36          | IF OPAR RelExpr CPAR Matched ELSE Unmatched

   37 Expr: ID
   38     | WRITE MathExpr
   39     | ID EQ MathExpr
   40     | ID EQ ID
   41     | ID EQ NUMBER
   42     | ID OPAR ArgList CPAR
   43     | ID EQ ID OPAR ArgList CPAR
   44     | ID OSB MathExpr CSB EQ ID OPAR ArgList CPAR
   45     | ID EQ ID OSB NUMBER CSB
   46     | ID OSB MathExpr CSB EQ MathExpr

   47 ArgList: %empty
   48        | MathExpr
   49        | MathExpr COMMA ArgList

   50 MathExpr: MathExpr PLUS MathExpr
   51         | MathExpr MINUS MathExpr
   52         | MathExpr DIV MathExpr
   53         | MathExpr MULT MathExpr
   54         | OPAR MathExpr CPAR
   55         | NUMBER
   56         | ID
   57         | ID OSB MathExpr CSB

   58 RelExpr: MathExpr GTE MathExpr
   59        | MathExpr LTE MathExpr
   60        | MathExpr GT MathExpr
   61        | MathExpr LT MathExpr
   62        | MathExpr EQEQ MathExpr
   63        | MathExpr NOTEQ MathExpr
   64        | RelExpr AND RelExpr
   65        | RelExpr OR RelExpr
   66        | MathExpr

   67 Tail: OPAR ParamDeclList CPAR Block

   68 $@6: %empty

   69 $@7: %empty

   70 Block: OCB $@6 VarDeclList StmtList $@7 CCB

   71 ParamDeclList: ParamDecl COMMA ParamDeclList
   72              | ParamDecl

   73 ParamDecl: %empty
   74          | TYPE ID
   75          | TYPE ID OSB CSB


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPE <string> (258) 8 11 12 13 14 15 17 74 75
    ID <string> (259) 8 11 12 13 14 15 17 21 22 37 39 40 41 42 43 44 45 46 56 57 74 75
    SEMICOLON <string> (260) 11 12 15 21 22 23 24 25 26 27
    EQ <string> (261) 39 40 41 43 44 45 46
    NUMBER <number> (262) 12 14 41 45 55
    PLUS <string> (263) 50
    WRITE <string> (264) 22 24 38
    WRITELN <string> (265) 23 25
    MINUS <string> (266) 51
    MULT <string> (267) 53
    DIV <string> (268) 52
    OSB <string> (269) 12 14 15 44 45 46 57 75
    CSB <string> (270) 12 14 15 44 45 46 57 75
    OCB <string> (271) 70
    CCB <string> (272) 70
    OPAR <string> (273) 8 29 33 35 36 42 43 44 54 67
    CPAR <string> (274) 8 29 33 35 36 42 43 44 54 67
    READ <string> (275) 21
    RETURN <string> (276) 27
    COMMA <string> (277) 49 71
    GTE <string> (278) 58
    LTE <string> (279) 59
    GT <string> (280) 60
    LT <string> (281) 61
    EQEQ <string> (282) 62
    NOTEQ <string> (283) 63
    WHILE <string> (284) 29
    IF <string> (285) 33 35 36
    ELSE <string> (286) 33 36
    OR <string> (287) 65
    AND <string> (288) 64
    STRING <string> (289) 24 25
    FUN <string> (290) 17


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    Program <ast> (37)
        on left: 2
        on right: 0
    $@1 (38)
        on left: 1
        on right: 2
    DeclList <ast> (39)
        on left: 3 4
        on right: 2 4
    Decl <ast> (40)
        on left: 5 6
        on right: 3 4
    FunDecl <ast> (41)
        on left: 8
        on right: 6
    $@2 (42)
        on left: 7
        on right: 8
    VarDeclList <ast> (43)
        on left: 9 10
        on right: 10 70
    VarDecl <ast> (44)
        on left: 11 12 13 14 15 17
        on right: 5 10
    $@3 (45)
        on left: 16
        on right: 17
    StmtList <ast> (46)
        on left: 18 19
        on right: 19 70
    Stmt <ast> (47)
        on left: 20 21 22 23 24 25 26 27 29 30 31
        on right: 18 19
    $@4 (48)
        on left: 28
        on right: 29
    Matched <ast> (49)
        on left: 33 34
        on right: 30 33 36
    $@5 (50)
        on left: 32
        on right: 33
    Unmatched <ast> (51)
        on left: 35 36
        on right: 31 36
    Expr <ast> (52)
        on left: 37 38 39 40 41 42 43 44 45 46
        on right: 26
    ArgList <ast> (53)
        on left: 47 48 49
        on right: 42 43 44 49
    MathExpr <ast> (54)
        on left: 50 51 52 53 54 55 56 57
        on right: 27 38 39 44 46 48 49 50 51 52 53 54 57 58 59 60 61 62 63 66
    RelExpr <ast> (55)
        on left: 58 59 60 61 62 63 64 65 66
        on right: 29 33 35 36 64 65
    Tail <ast> (56)
        on left: 67
        on right: 17
    Block <ast> (57)
        on left: 70
        on right: 8 29 34 35 67
    $@6 (58)
        on left: 68
        on right: 70
    $@7 (59)
        on left: 69
        on right: 70
    ParamDeclList <ast> (60)
        on left: 71 72
        on right: 67 71
    ParamDecl <ast> (61)
        on left: 73 74 75
        on right: 71 72


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 . DeclList

    TYPE  shift, and go to state 4
    FUN   shift, and go to state 5

    DeclList  go to state 6
    Decl      go to state 7
    FunDecl   go to state 8
    VarDecl   go to state 9


State 3

    0 $accept: Program $end .

    $default  accept


State 4

    8 FunDecl: TYPE . ID OPAR $@2 CPAR Block
   11 VarDecl: TYPE . ID SEMICOLON
   12        | TYPE . ID OSB NUMBER CSB SEMICOLON
   13        | TYPE . ID
   14        | TYPE . ID OSB NUMBER CSB
   15        | TYPE . ID OSB CSB SEMICOLON

    ID  shift, and go to state 10


State 5

   17 VarDecl: FUN . TYPE ID $@3 Tail

    TYPE  shift, and go to state 11


State 6

    2 Program: $@1 DeclList .

    $default  reduce using rule 2 (Program)


State 7

    3 DeclList: Decl .
    4         | Decl . DeclList

    TYPE  shift, and go to state 4
    FUN   shift, and go to state 5

    $default  reduce using rule 3 (DeclList)

    DeclList  go to state 12
    Decl      go to state 7
    FunDecl   go to state 8
    VarDecl   go to state 9


State 8

    6 Decl: FunDecl .

    $default  reduce using rule 6 (Decl)


State 9

    5 Decl: VarDecl .

    $default  reduce using rule 5 (Decl)


State 10

    8 FunDecl: TYPE ID . OPAR $@2 CPAR Block
   11 VarDecl: TYPE ID . SEMICOLON
   12        | TYPE ID . OSB NUMBER CSB SEMICOLON
   13        | TYPE ID .
   14        | TYPE ID . OSB NUMBER CSB
   15        | TYPE ID . OSB CSB SEMICOLON

    SEMICOLON  shift, and go to state 13
    OSB        shift, and go to state 14
    OPAR       shift, and go to state 15

    $default  reduce using rule 13 (VarDecl)


State 11

   17 VarDecl: FUN TYPE . ID $@3 Tail

    ID  shift, and go to state 16


State 12

    4 DeclList: Decl DeclList .

    $default  reduce using rule 4 (DeclList)


State 13

   11 VarDecl: TYPE ID SEMICOLON .

    $default  reduce using rule 11 (VarDecl)


State 14

   12 VarDecl: TYPE ID OSB . NUMBER CSB SEMICOLON
   14        | TYPE ID OSB . NUMBER CSB
   15        | TYPE ID OSB . CSB SEMICOLON

    NUMBER  shift, and go to state 17
    CSB     shift, and go to state 18


State 15

    8 FunDecl: TYPE ID OPAR . $@2 CPAR Block

    $default  reduce using rule 7 ($@2)

    $@2  go to state 19


State 16

   17 VarDecl: FUN TYPE ID . $@3 Tail

    $default  reduce using rule 16 ($@3)

    $@3  go to state 20


State 17

   12 VarDecl: TYPE ID OSB NUMBER . CSB SEMICOLON
   14        | TYPE ID OSB NUMBER . CSB

    CSB  shift, and go to state 21


State 18

   15 VarDecl: TYPE ID OSB CSB . SEMICOLON

    SEMICOLON  shift, and go to state 22


State 19

    8 FunDecl: TYPE ID OPAR $@2 . CPAR Block

    CPAR  shift, and go to state 23


State 20

   17 VarDecl: FUN TYPE ID $@3 . Tail

    OPAR  shift, and go to state 24

    Tail  go to state 25


State 21

   12 VarDecl: TYPE ID OSB NUMBER CSB . SEMICOLON
   14        | TYPE ID OSB NUMBER CSB .

    SEMICOLON  shift, and go to state 26

    $default  reduce using rule 14 (VarDecl)


State 22

   15 VarDecl: TYPE ID OSB CSB SEMICOLON .

    $default  reduce using rule 15 (VarDecl)


State 23

    8 FunDecl: TYPE ID OPAR $@2 CPAR . Block

    OCB  shift, and go to state 27

    Block  go to state 28


State 24

   67 Tail: OPAR . ParamDeclList CPAR Block

    TYPE  shift, and go to state 29

    $default  reduce using rule 73 (ParamDecl)

    ParamDeclList  go to state 30
    ParamDecl      go to state 31


State 25

   17 VarDecl: FUN TYPE ID $@3 Tail .

    $default  reduce using rule 17 (VarDecl)


State 26

   12 VarDecl: TYPE ID OSB NUMBER CSB SEMICOLON .

    $default  reduce using rule 12 (VarDecl)


State 27

   70 Block: OCB . $@6 VarDeclList StmtList $@7 CCB

    $default  reduce using rule 68 ($@6)

    $@6  go to state 32


State 28

    8 FunDecl: TYPE ID OPAR $@2 CPAR Block .

    $default  reduce using rule 8 (FunDecl)


State 29

   74 ParamDecl: TYPE . ID
   75          | TYPE . ID OSB CSB

    ID  shift, and go to state 33


State 30

   67 Tail: OPAR ParamDeclList . CPAR Block

    CPAR  shift, and go to state 34


State 31

   71 ParamDeclList: ParamDecl . COMMA ParamDeclList
   72              | ParamDecl .

    COMMA  shift, and go to state 35

    $default  reduce using rule 72 (ParamDeclList)


State 32

   70 Block: OCB $@6 . VarDeclList StmtList $@7 CCB

    TYPE  shift, and go to state 36
    FUN   shift, and go to state 5

    $default  reduce using rule 9 (VarDeclList)

    VarDeclList  go to state 37
    VarDecl      go to state 38


State 33

   74 ParamDecl: TYPE ID .
   75          | TYPE ID . OSB CSB

    OSB  shift, and go to state 39

    $default  reduce using rule 74 (ParamDecl)


State 34

   67 Tail: OPAR ParamDeclList CPAR . Block

    OCB  shift, and go to state 27

    Block  go to state 40


State 35

   71 ParamDeclList: ParamDecl COMMA . ParamDeclList

    TYPE  shift, and go to state 29

    $default  reduce using rule 73 (ParamDecl)

    ParamDeclList  go to state 41
    ParamDecl      go to state 31


State 36

   11 VarDecl: TYPE . ID SEMICOLON
   12        | TYPE . ID OSB NUMBER CSB SEMICOLON
   13        | TYPE . ID
   14        | TYPE . ID OSB NUMBER CSB
   15        | TYPE . ID OSB CSB SEMICOLON

    ID  shift, and go to state 42


State 37

   70 Block: OCB $@6 VarDeclList . StmtList $@7 CCB

    ID       shift, and go to state 43
    WRITE    shift, and go to state 44
    WRITELN  shift, and go to state 45
    OCB      shift, and go to state 27
    READ     shift, and go to state 46
    RETURN   shift, and go to state 47
    WHILE    shift, and go to state 48
    IF       shift, and go to state 49

    ID        [reduce using rule 20 (Stmt)]
    WRITE     [reduce using rule 20 (Stmt)]
    WRITELN   [reduce using rule 20 (Stmt)]
    OCB       [reduce using rule 20 (Stmt)]
    READ      [reduce using rule 20 (Stmt)]
    RETURN    [reduce using rule 20 (Stmt)]
    WHILE     [reduce using rule 20 (Stmt)]
    IF        [reduce using rule 20 (Stmt)]
    $default  reduce using rule 20 (Stmt)

    StmtList   go to state 50
    Stmt       go to state 51
    Matched    go to state 52
    Unmatched  go to state 53
    Expr       go to state 54
    Block      go to state 55


State 38

   10 VarDeclList: VarDecl . VarDeclList

    TYPE  shift, and go to state 36
    FUN   shift, and go to state 5

    $default  reduce using rule 9 (VarDeclList)

    VarDeclList  go to state 56
    VarDecl      go to state 38


State 39

   75 ParamDecl: TYPE ID OSB . CSB

    CSB  shift, and go to state 57


State 40

   67 Tail: OPAR ParamDeclList CPAR Block .

    $default  reduce using rule 67 (Tail)


State 41

   71 ParamDeclList: ParamDecl COMMA ParamDeclList .

    $default  reduce using rule 71 (ParamDeclList)


State 42

   11 VarDecl: TYPE ID . SEMICOLON
   12        | TYPE ID . OSB NUMBER CSB SEMICOLON
   13        | TYPE ID .
   14        | TYPE ID . OSB NUMBER CSB
   15        | TYPE ID . OSB CSB SEMICOLON

    SEMICOLON  shift, and go to state 13
    OSB        shift, and go to state 14

    $default  reduce using rule 13 (VarDecl)


State 43

   37 Expr: ID .
   39     | ID . EQ MathExpr
   40     | ID . EQ ID
   41     | ID . EQ NUMBER
   42     | ID . OPAR ArgList CPAR
   43     | ID . EQ ID OPAR ArgList CPAR
   44     | ID . OSB MathExpr CSB EQ ID OPAR ArgList CPAR
   45     | ID . EQ ID OSB NUMBER CSB
   46     | ID . OSB MathExpr CSB EQ MathExpr

    EQ    shift, and go to state 58
    OSB   shift, and go to state 59
    OPAR  shift, and go to state 60

    $default  reduce using rule 37 (Expr)


State 44

   22 Stmt: WRITE . ID SEMICOLON
   24     | WRITE . STRING SEMICOLON
   38 Expr: WRITE . MathExpr

    ID      shift, and go to state 61
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63
    STRING  shift, and go to state 64

    MathExpr  go to state 65


State 45

   23 Stmt: WRITELN . SEMICOLON
   25     | WRITELN . STRING SEMICOLON

    SEMICOLON  shift, and go to state 66
    STRING     shift, and go to state 67


State 46

   21 Stmt: READ . ID SEMICOLON

    ID  shift, and go to state 68


State 47

   27 Stmt: RETURN . MathExpr SEMICOLON

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 70


State 48

   29 Stmt: WHILE . $@4 OPAR RelExpr CPAR Block

    $default  reduce using rule 28 ($@4)

    $@4  go to state 71


State 49

   33 Matched: IF . OPAR RelExpr CPAR Matched ELSE $@5 Matched
   35 Unmatched: IF . OPAR RelExpr CPAR Block
   36          | IF . OPAR RelExpr CPAR Matched ELSE Unmatched

    OPAR  shift, and go to state 72


State 50

   70 Block: OCB $@6 VarDeclList StmtList . $@7 CCB

    $default  reduce using rule 69 ($@7)

    $@7  go to state 73


State 51

   18 StmtList: Stmt .
   19         | Stmt . StmtList

    ID       shift, and go to state 43
    WRITE    shift, and go to state 44
    WRITELN  shift, and go to state 45
    OCB      shift, and go to state 27
    READ     shift, and go to state 46
    RETURN   shift, and go to state 47
    WHILE    shift, and go to state 48
    IF       shift, and go to state 49

    ID        [reduce using rule 20 (Stmt)]
    WRITE     [reduce using rule 20 (Stmt)]
    WRITELN   [reduce using rule 20 (Stmt)]
    OCB       [reduce using rule 20 (Stmt)]
    CCB       reduce using rule 18 (StmtList)
    CCB       [reduce using rule 20 (Stmt)]
    READ      [reduce using rule 20 (Stmt)]
    RETURN    [reduce using rule 20 (Stmt)]
    WHILE     [reduce using rule 20 (Stmt)]
    IF        [reduce using rule 20 (Stmt)]
    $default  reduce using rule 18 (StmtList)

    StmtList   go to state 74
    Stmt       go to state 51
    Matched    go to state 52
    Unmatched  go to state 53
    Expr       go to state 54
    Block      go to state 55


State 52

   30 Stmt: Matched .

    $default  reduce using rule 30 (Stmt)


State 53

   31 Stmt: Unmatched .

    $default  reduce using rule 31 (Stmt)


State 54

   26 Stmt: Expr . SEMICOLON

    SEMICOLON  shift, and go to state 75


State 55

   34 Matched: Block .

    $default  reduce using rule 34 (Matched)


State 56

   10 VarDeclList: VarDecl VarDeclList .

    $default  reduce using rule 10 (VarDeclList)


State 57

   75 ParamDecl: TYPE ID OSB CSB .

    $default  reduce using rule 75 (ParamDecl)


State 58

   39 Expr: ID EQ . MathExpr
   40     | ID EQ . ID
   41     | ID EQ . NUMBER
   43     | ID EQ . ID OPAR ArgList CPAR
   45     | ID EQ . ID OSB NUMBER CSB

    ID      shift, and go to state 76
    NUMBER  shift, and go to state 77
    OPAR    shift, and go to state 63

    MathExpr  go to state 78


State 59

   44 Expr: ID OSB . MathExpr CSB EQ ID OPAR ArgList CPAR
   46     | ID OSB . MathExpr CSB EQ MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 79


State 60

   42 Expr: ID OPAR . ArgList CPAR

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    $default  reduce using rule 47 (ArgList)

    ArgList   go to state 80
    MathExpr  go to state 81


State 61

   22 Stmt: WRITE ID . SEMICOLON
   56 MathExpr: ID .
   57         | ID . OSB MathExpr CSB

    SEMICOLON  shift, and go to state 82
    OSB        shift, and go to state 83

    SEMICOLON  [reduce using rule 56 (MathExpr)]
    $default   reduce using rule 56 (MathExpr)


State 62

   55 MathExpr: NUMBER .

    $default  reduce using rule 55 (MathExpr)


State 63

   54 MathExpr: OPAR . MathExpr CPAR

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 84


State 64

   24 Stmt: WRITE STRING . SEMICOLON

    SEMICOLON  shift, and go to state 85


State 65

   38 Expr: WRITE MathExpr .
   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    MULT   shift, and go to state 88
    DIV    shift, and go to state 89

    $default  reduce using rule 38 (Expr)


State 66

   23 Stmt: WRITELN SEMICOLON .

    $default  reduce using rule 23 (Stmt)


State 67

   25 Stmt: WRITELN STRING . SEMICOLON

    SEMICOLON  shift, and go to state 90


State 68

   21 Stmt: READ ID . SEMICOLON

    SEMICOLON  shift, and go to state 91


State 69

   56 MathExpr: ID .
   57         | ID . OSB MathExpr CSB

    OSB  shift, and go to state 83

    $default  reduce using rule 56 (MathExpr)


State 70

   27 Stmt: RETURN MathExpr . SEMICOLON
   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr

    SEMICOLON  shift, and go to state 92
    PLUS       shift, and go to state 86
    MINUS      shift, and go to state 87
    MULT       shift, and go to state 88
    DIV        shift, and go to state 89


State 71

   29 Stmt: WHILE $@4 . OPAR RelExpr CPAR Block

    OPAR  shift, and go to state 93


State 72

   33 Matched: IF OPAR . RelExpr CPAR Matched ELSE $@5 Matched
   35 Unmatched: IF OPAR . RelExpr CPAR Block
   36          | IF OPAR . RelExpr CPAR Matched ELSE Unmatched

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 94
    RelExpr   go to state 95


State 73

   70 Block: OCB $@6 VarDeclList StmtList $@7 . CCB

    CCB  shift, and go to state 96


State 74

   19 StmtList: Stmt StmtList .

    $default  reduce using rule 19 (StmtList)


State 75

   26 Stmt: Expr SEMICOLON .

    $default  reduce using rule 26 (Stmt)


State 76

   40 Expr: ID EQ ID .
   43     | ID EQ ID . OPAR ArgList CPAR
   45     | ID EQ ID . OSB NUMBER CSB
   56 MathExpr: ID .
   57         | ID . OSB MathExpr CSB

    OSB   shift, and go to state 97
    OPAR  shift, and go to state 98

    SEMICOLON  reduce using rule 40 (Expr)
    SEMICOLON  [reduce using rule 56 (MathExpr)]
    $default   reduce using rule 56 (MathExpr)


State 77

   41 Expr: ID EQ NUMBER .
   55 MathExpr: NUMBER .

    SEMICOLON  reduce using rule 41 (Expr)
    SEMICOLON  [reduce using rule 55 (MathExpr)]
    $default   reduce using rule 55 (MathExpr)


State 78

   39 Expr: ID EQ MathExpr .
   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    MULT   shift, and go to state 88
    DIV    shift, and go to state 89

    $default  reduce using rule 39 (Expr)


State 79

   44 Expr: ID OSB MathExpr . CSB EQ ID OPAR ArgList CPAR
   46     | ID OSB MathExpr . CSB EQ MathExpr
   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    MULT   shift, and go to state 88
    DIV    shift, and go to state 89
    CSB    shift, and go to state 99


State 80

   42 Expr: ID OPAR ArgList . CPAR

    CPAR  shift, and go to state 100


State 81

   48 ArgList: MathExpr .
   49        | MathExpr . COMMA ArgList
   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    MULT   shift, and go to state 88
    DIV    shift, and go to state 89
    COMMA  shift, and go to state 101

    $default  reduce using rule 48 (ArgList)


State 82

   22 Stmt: WRITE ID SEMICOLON .

    $default  reduce using rule 22 (Stmt)


State 83

   57 MathExpr: ID OSB . MathExpr CSB

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 102


State 84

   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr
   54         | OPAR MathExpr . CPAR

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    MULT   shift, and go to state 88
    DIV    shift, and go to state 89
    CPAR   shift, and go to state 103


State 85

   24 Stmt: WRITE STRING SEMICOLON .

    $default  reduce using rule 24 (Stmt)


State 86

   50 MathExpr: MathExpr PLUS . MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 104


State 87

   51 MathExpr: MathExpr MINUS . MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 105


State 88

   53 MathExpr: MathExpr MULT . MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 106


State 89

   52 MathExpr: MathExpr DIV . MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 107


State 90

   25 Stmt: WRITELN STRING SEMICOLON .

    $default  reduce using rule 25 (Stmt)


State 91

   21 Stmt: READ ID SEMICOLON .

    $default  reduce using rule 21 (Stmt)


State 92

   27 Stmt: RETURN MathExpr SEMICOLON .

    $default  reduce using rule 27 (Stmt)


State 93

   29 Stmt: WHILE $@4 OPAR . RelExpr CPAR Block

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 94
    RelExpr   go to state 108


State 94

   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr
   58 RelExpr: MathExpr . GTE MathExpr
   59        | MathExpr . LTE MathExpr
   60        | MathExpr . GT MathExpr
   61        | MathExpr . LT MathExpr
   62        | MathExpr . EQEQ MathExpr
   63        | MathExpr . NOTEQ MathExpr
   66        | MathExpr .

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    MULT   shift, and go to state 88
    DIV    shift, and go to state 89
    GTE    shift, and go to state 109
    LTE    shift, and go to state 110
    GT     shift, and go to state 111
    LT     shift, and go to state 112
    EQEQ   shift, and go to state 113
    NOTEQ  shift, and go to state 114

    $default  reduce using rule 66 (RelExpr)


State 95

   33 Matched: IF OPAR RelExpr . CPAR Matched ELSE $@5 Matched
   35 Unmatched: IF OPAR RelExpr . CPAR Block
   36          | IF OPAR RelExpr . CPAR Matched ELSE Unmatched
   64 RelExpr: RelExpr . AND RelExpr
   65        | RelExpr . OR RelExpr

    CPAR  shift, and go to state 115
    OR    shift, and go to state 116
    AND   shift, and go to state 117


State 96

   70 Block: OCB $@6 VarDeclList StmtList $@7 CCB .

    $default  reduce using rule 70 (Block)


State 97

   45 Expr: ID EQ ID OSB . NUMBER CSB
   57 MathExpr: ID OSB . MathExpr CSB

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 118
    OPAR    shift, and go to state 63

    MathExpr  go to state 102


State 98

   43 Expr: ID EQ ID OPAR . ArgList CPAR

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    $default  reduce using rule 47 (ArgList)

    ArgList   go to state 119
    MathExpr  go to state 81


State 99

   44 Expr: ID OSB MathExpr CSB . EQ ID OPAR ArgList CPAR
   46     | ID OSB MathExpr CSB . EQ MathExpr

    EQ  shift, and go to state 120


State 100

   42 Expr: ID OPAR ArgList CPAR .

    $default  reduce using rule 42 (Expr)


State 101

   49 ArgList: MathExpr COMMA . ArgList

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    $default  reduce using rule 47 (ArgList)

    ArgList   go to state 121
    MathExpr  go to state 81


State 102

   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr
   57         | ID OSB MathExpr . CSB

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    MULT   shift, and go to state 88
    DIV    shift, and go to state 89
    CSB    shift, and go to state 122


State 103

   54 MathExpr: OPAR MathExpr CPAR .

    $default  reduce using rule 54 (MathExpr)


State 104

   50 MathExpr: MathExpr . PLUS MathExpr
   50         | MathExpr PLUS MathExpr .
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr

    MULT  shift, and go to state 88
    DIV   shift, and go to state 89

    $default  reduce using rule 50 (MathExpr)


State 105

   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   51         | MathExpr MINUS MathExpr .
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr

    MULT  shift, and go to state 88
    DIV   shift, and go to state 89

    $default  reduce using rule 51 (MathExpr)


State 106

   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   53         | MathExpr . MULT MathExpr
   53         | MathExpr MULT MathExpr .

    $default  reduce using rule 53 (MathExpr)


State 107

   50 MathExpr: MathExpr . PLUS MathExpr
   51         | MathExpr . MINUS MathExpr
   52         | MathExpr . DIV MathExpr
   52         | MathExpr DIV MathExpr .
   53         | MathExpr . MULT MathExpr

    $default  reduce using rule 52 (MathExpr)


State 108

   29 Stmt: WHILE $@4 OPAR RelExpr . CPAR Block
   64 RelExpr: RelExpr . AND RelExpr
   65        | RelExpr . OR RelExpr

    CPAR  shift, and go to state 123
    OR    shift, and go to state 116
    AND   shift, and go to state 117


State 109

   58 RelExpr: MathExpr GTE . MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 124


State 110

   59 RelExpr: MathExpr LTE . MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 125


State 111

   60 RelExpr: MathExpr GT . MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 126


State 112

   61 RelExpr: MathExpr LT . MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 127


State 113

   62 RelExpr: MathExpr EQEQ . MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 128


State 114

   63 RelExpr: MathExpr NOTEQ . MathExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 129


State 115

   33 Matched: IF OPAR RelExpr CPAR . Matched ELSE $@5 Matched
   35 Unmatched: IF OPAR RelExpr CPAR . Block
   36          | IF OPAR RelExpr CPAR . Matched ELSE Unmatched

    OCB  shift, and go to state 27
    IF   shift, and go to state 130

    Matched  go to state 131
    Block    go to state 132


State 116

   65 RelExpr: RelExpr OR . RelExpr

    ID      shift, and go to state 69
    NUMBER  shift, and go to state 62
    OPAR    shift, and go to state 63

    MathExpr  go to state 94
    RelExpr   go to state 133


State 117

   64 RelExpr: RelExpr AND . RelExpr
